# VSR-Place

./: .gitignore  .gitmodules  CLAUDE.md  README.md  log.md  plan.md  plan_final.md  proposal.md  pyproject.toml  report.md  requirements.txt  setup.py
configs/: defaults.yaml
data/: ispd_placements.pkl
docs/: ISPD2005_DATA_PIPELINE.md  autodl_guide.md  autodl_ssh_setup.md  baseline_report.md  hardware_requirements.md  paper_results.md  proposal_v1_original.md  restore_autodl_env.md
paper/: iccad_draft.aux  iccad_draft.out  iccad_draft.tex  iccad_main.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main_draft.aux  main_draft.bbl  main_draft.blg  main_draft.out  main_draft.tex  neurips_2026.sty  neurips_review.md  refs.bib  review_response_plan.md  supplement.aux  supplement.out  supplement.tex
scripts/: aggregate_results.py  analyze_baseline_sweeps.py  analyze_component_ablation.py  analyze_critical_eval.py  analyze_dreamplace_pipeline.py  analyze_extra_experiments.py  analyze_full_metrics.py  analyze_iterative.py  analyze_round2_review.py  analyze_violation_breakdown.py  bootstrap_autodl.sh  compute_neurips_stats.py  compute_robust_stats.py  download_benchmarks.sh  download_checkpoints.sh  eval_neural_vsr.py  extend_lambda_sweep.py  gen_ispd_placements.py  lambda_loco_cv.py  make_ablation_figures.py  make_convergence_figure.py  make_figures.py  make_framework_diagram.py  make_neurips_bigblue3_figure.py  make_neurips_main_figure.py  make_placement_figure.py  make_post_vs_intra_figure.py  make_timestep_figure.py  make_toy_figure.py  parse_ispd2005.py  (+28 more)
(+139 files in other folders)
